# assign-me-project

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
assignme/: manage.py
assignme/assignme/: asgi.py  settings.py  urls.py  views.py  wsgi.py
assignme/assignments/: admin.py  models.py  urls.py  views.py
assignme/assignments/templates/: assignment_detail.html  assignment_index.html
assignme/course/: admin.py  forms.py  models.py  urls.py  views.py
assignme/course/templates/: course_category.html  course_detail.html  course_index.html
assignme/course/tests/: test_models.py
assignme/course/tests_course/: tests_views.py
assignme/handins/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
assignme/handins/static/css/: style.css
assignme/handins/templates/: handin_detail.html  handin_form.html  handins_index.html
assignme/handins/test_handins/: tests_views.py
assignme/handins/tests/: test_models.py  tests_views.py
assignme/person/: admin.py  constants.py  models.py  urls.py  views.py
assignme/person/templates/: person_detail.html  person_index.html
assignme/templates/: 404.html  500.html  base.html  comment.html  course_category.html  course_detail.html  course_index.html  handin_form.html  handins_index.html  index.html  person_index.html
assignme/templates/registration/: login.html
assignme/tests/: test_course_models.py  test_person_models.py  test_person_views.py  tests_handin_views.py
