[tool.poetry]
name = "assign-me-project"
version = "0.1.0"
description = ""
authors = ["Jesper Jonsson <jesper_jonsson@hotmail.se>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
