[tool.poetry]
name = "assign-me-project"
version = "0.1.0"
description = ""
authors = ["Jesper Jonsson <jesper_jonsson@hotmail.se>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
Pillow = "^8.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.1"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
